[package]
name = "svp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.3" }

[dev-dependencies]
nalgebra = { version = "0.32.3", features = ["arbitrary", "debug"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
quickcheck = "1.0.3"
quickcheck_macros = "1"

[[bench]]
name = "benches"
harness = false
